# vivalehack

./: .gitignore  .gitmodules  README.md
agents/: agent.py
backend/: .gitignore  README.md  config.py  hello.py  instructions.txt  main.py  models.py  pyproject.toml  run.py
backend/agents/: networking_agent.py  orchestration.py  scheduling_agent.py  summarization_agent.py
backend/data/: vivatech_agenda.md
backend/memory/: context_manager.py  conversation_summary.py  summary_agent.py
backend/services/: __init__.py  chat_storage.py  conversation_service.py  linkedin_service.py  openai_service.py  user_storage.py
conference_agent/: agent.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx  ChatInterface.tsx  ChatMessage.tsx  InfiniteScrollPrompts.tsx  MainLayout.tsx  OnboardingStep.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: ChatContext.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json
frontend/src/pages/: Index.tsx
